fix z-index for header to stay on top

--- a/src/styles.css
+++ b/src/styles.css
@@ -20,6 +20,7 @@ header {
 	padding: 0 30px;
 	position: sticky;
 	top: 0;
+	z-index: 100;
 }
 footer {
 	margin-top: auto;
